<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/love"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15_marg"
            android:layout_marginTop="@dimen/dp60_marg"
            android:fontFamily="@font/aclonica"
            android:text="@string/signin_title"
            android:textColor="@color/white"
            android:textSize="@dimen/sp30_text" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp25_marg"
            android:layout_marginBottom="@dimen/dp30_marg"
            android:layout_below="@id/tv_logo"
            android:fontFamily="sans-serif"
            android:text="@string/subtitle"
            android:textColor="@color/white"
            android:textSize="@dimen/sp19_text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_h"
            android:layout_marginLeft="@dimen/dp20_marg"
            android:layout_marginRight="@dimen/dp20_marg"
            android:layout_marginBottom="@dimen/dp10_marg"
            android:layout_below="@id/tv_subtitle"
            android:background="@drawable/et_custom"
            android:fontFamily="sans-serif"
            android:hint="@string/profile"
            android:inputType="textPersonName"
            android:padding="@dimen/dp15_pad"
            android:textSize="@dimen/sp17_text" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/form_h"
            android:layout_marginStart="@dimen/dp20_marg"
            android:layout_marginTop="@dimen/dp3_marg"
            android:layout_marginEnd="@dimen/dp10_marg"
            android:layout_marginBottom="@dimen/dp70_marg"
            android:layout_below="@id/et_name"
            android:text="Date of Birth"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20_text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btDatePick"
            android:layout_width="@dimen/dp231_marg"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_name"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/dp20_marg"
            android:layout_marginRight="@dimen/dp20_marg"
            android:layout_marginBottom="@dimen/dp10_marg"
            android:background="@drawable/btn_custom2"
            android:text="@string/select_dob"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp20_text" />

        <TextView
            android:id="@+id/id_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20_marg"
            android:layout_marginTop="@dimen/dp3_marg"
            android:layout_marginEnd="@dimen/dp10_marg"
            android:layout_marginBottom="@dimen/dp70_marg"
            android:layout_below="@id/btDatePick"
            android:text="@string/id_gender"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20_text"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="@dimen/spin_w"
            android:layout_height="@dimen/spin_h"
            android:layout_below="@id/btDatePick"
            android:layout_marginTop="@dimen/dp3_marg"
            android:layout_marginEnd="@dimen/dp3_marg"
            android:layout_marginBottom="@dimen/dp3_marg"
            android:layout_toEndOf="@id/id_gender"
            android:background="@drawable/et_custom"
            android:textSize="@dimen/sp17_text"
            android:hint="@string/select_gender"
            android:text="@string/select"/>

        <TextView
            android:id="@+id/seeking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20_marg"
            android:layout_marginTop="@dimen/dp3_marg"
            android:layout_marginEnd="@dimen/dp10_marg"
            android:layout_marginBottom="@dimen/dp70_marg"
            android:layout_below="@id/btDatePick"
            android:layout_toStartOf="@id/gendertwo"
            android:text="@string/seeking"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20_text"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/gendertwo"
            android:layout_width="@dimen/spin_w"
            android:layout_height="@dimen/spin_h"
            android:layout_below="@id/btDatePick"
            android:layout_marginTop="@dimen/dp3_marg"
            android:layout_alignEnd="@id/btDatePick"
            android:layout_marginEnd="@dimen/dp3_marg"
            android:layout_marginBottom="@dimen/dp3_marg"
            android:background="@drawable/et_custom"
            android:textSize="@dimen/sp17_text"
            android:hint="@string/select_gender"  />

        <EditText
            android:id="@+id/occupation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_h"
            android:layout_marginLeft="@dimen/dp20_marg"
            android:layout_marginRight="@dimen/dp20_marg"
            android:layout_marginBottom="@dimen/dp10_marg"
            android:layout_marginTop="@dimen/dp10_marg"
            android:layout_below="@id/gender"
            android:background="@drawable/et_custom"
            android:fontFamily="sans-serif"
            android:hint="@string/occupation"
            android:inputType="text"
            android:padding="@dimen/dp15_pad"
            android:textSize="@dimen/sp17_text" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/describe_h"
            android:layout_marginLeft="@dimen/dp20_marg"
            android:layout_marginRight="@dimen/dp20_marg"
            android:layout_marginBottom="@dimen/dp10_marg"
            android:layout_below="@id/occupation"
            android:background="@drawable/et_custom"
            android:fontFamily="sans-serif"
            android:hint="@string/description"
            android:scrollHorizontally="false"
            android:padding="@dimen/dp15_pad"
            android:textSize="@dimen/sp17_text"
            android:maxLines ="4"
            android:maxLength ="2000"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/submit_h"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp60_marg"
            android:layout_marginTop="@dimen/dp20_marg"
            android:layout_marginRight="@dimen/dp60_marg"
            android:layout_marginBottom="@dimen/dp30_marg"
            android:layout_below="@id/description"
            android:background="@drawable/btn_custom"
            android:fontFamily="sans-serif"
            android:onClick="goToSubmit"
            android:text="@string/goToSubmit"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp20_text"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/btn_submit"
            android:text="@string/name_year"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp24_text"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>



