...
    <string name="select_gender">Select</string>
    <string name="seeking">Seeking</string>
    <string name="occupation">Occupation</string>
    <string name="default_name">Default</string>
    <string name="default_age">18</string>
    <string name="default_ider">Male</string>
    <string name="default_seek">Female</string>
    <string name="default_job">Unemployed</string>
    <string name="default_about">Nothing</string>
    <string name="thanks_signed_in">\Hi, I\'m  \</string>
    <string name="description">Description</string>
    <string name="select">[Select]</string>
    <string name="age_consent">Must be 18 or older</string>
...
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="settings_will_go_here">Settings will go here</string>
    <string name="matches_will_go_here">My Matches</string>
    <string-array name="select_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Trans</item>
        <item>Non-Binary</item>
    </string-array>
    <string-array name="reminder_time">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
...
